Added outputs to the console