@@ -12,11 +12,13 @@ public class InMemoryTaskManager implements TaskManager {
 
     @Override
     public List<Task> getAllTasks() {
+        System.out.println("Получен список всех задач. Количество: " + tasks.size());
         return new ArrayList<>(tasks.values());
     }
 
     @Override
     public void deleteAllTasks() {
+        System.out.println("Удалены все задачи. Количество удаленных: " + tasks.size());
         tasks.clear();
     }
 
@@ -25,6 +27,9 @@ public class InMemoryTaskManager implements TaskManager {
         Task task = tasks.get(id);
         if (task != null) {
             addToHistory(task);
+            System.out.println("Задача с ID=" + id + " успешно найдена");
+        } else {
+            System.out.println("Ошибка: задача с ID=" + id + " не найдена");
         }
         return task;
     }
@@ -33,6 +38,7 @@ public class InMemoryTaskManager implements TaskManager {
     public Task createTask(Task task) {
         task.setId(taskIdCounter++);
         tasks.put(task.getId(), task);
+        System.out.println("Создана новая задача с ID=" + task.getId());
         return task;
     }
 
@@ -40,21 +46,32 @@ public class InMemoryTaskManager implements TaskManager {
     public void updateTask(Task task) {
         if (tasks.containsKey(task.getId())) {
             tasks.put(task.getId(), task);
+            System.out.println("Задача с ID=" + task.getId() + " успешно обновлена");
+        } else {
+            System.out.println("Ошибка обновления: задача с ID=" + task.getId() + " не найдена");
         }
     }
 
     @Override
     public void deleteTaskById(int id) {
-        tasks.remove(id);
+        Task removed = tasks.remove(id);
+        if (removed != null) {
+            System.out.println("Задача с ID=" + id + " успешно удалена");
+        } else {
+            System.out.println("Ошибка удаления: задача с ID=" + id + " не найдена");
+        }
     }
 
     @Override
     public List<Epic> getAllEpics() {
+        System.out.println("Получен список всех эпиков. Количество: " + epics.size());
         return new ArrayList<>(epics.values());
     }
 
     @Override
     public void deleteAllEpics() {
+        System.out.println("Удалены все эпики. Количество: " + epics.size() +
+                " и все подзадачи. Количество: " + subtasks.size());
         epics.clear();
         subtasks.clear();
     }
@@ -64,6 +81,9 @@ public class InMemoryTaskManager implements TaskManager {
         Epic epic = epics.get(id);
         if (epic != null) {
             addToHistory(epic);
+            System.out.println("Эпик с ID=" + id + " успешно найден");
+        } else {
+            System.out.println("Ошибка: эпик с ID=" + id + " не найден");
         }
         return epic;
     }
@@ -72,6 +92,7 @@ public class InMemoryTaskManager implements TaskManager {
     public Epic createEpic(Epic epic) {
         epic.setId(taskIdCounter++);
         epics.put(epic.getId(), epic);
+        System.out.println("Создан новый эпик с ID=" + epic.getId());
         return epic;
     }
 
@@ -81,6 +102,9 @@ public class InMemoryTaskManager implements TaskManager {
             Epic savedEpic = epics.get(epic.getId());
             savedEpic.setName(epic.getName());
             savedEpic.setDescription(epic.getDescription());
+            System.out.println("Эпик с ID=" + epic.getId() + " успешно обновлен");
+        } else {
+            System.out.println("Ошибка обновления: эпик с ID=" + epic.getId() + " не найден");
         }
     }
 
@@ -88,14 +112,19 @@ public class InMemoryTaskManager implements TaskManager {
     public void deleteEpicById(int id) {
         Epic epic = epics.remove(id);
         if (epic != null) {
+            int subtasksCount = epic.getSubtaskIds().size();
             for (Integer subtaskId : epic.getSubtaskIds()) {
                 subtasks.remove(subtaskId);
             }
+            System.out.println("Эпик с ID=" + id + " и его " + subtasksCount + " подзадач успешно удалены");
+        } else {
+            System.out.println("Ошибка удаления: эпик с ID=" + id + " не найден");
         }
     }
 
     @Override
     public List<Subtask> getAllSubtasks() {
+        System.out.println("Получен список всех подзадач. Количество: " + subtasks.size());
         return new ArrayList<>(subtasks.values());
     }
 
@@ -110,12 +139,16 @@ public class InMemoryTaskManager implements TaskManager {
                     result.add(subtask);
                 }
             }
+            System.out.println("Получены подзадачи для эпика ID=" + epicId + ". Количество: " + result.size());
+        } else {
+            System.out.println("Ошибка: эпик с ID=" + epicId + " не найден, невозможно получить подзадачи");
         }
         return result;
     }
 
     @Override
     public void deleteAllSubtasks() {
+        System.out.println("Удалены все подзадачи. Количество: " + subtasks.size());
         subtasks.clear();
         for (Epic epic : epics.values()) {
             epic.getSubtaskIds().clear();
@@ -128,6 +161,9 @@ public class InMemoryTaskManager implements TaskManager {
         Subtask subtask = subtasks.get(id);
         if (subtask != null) {
             addToHistory(subtask);
+            System.out.println("Подзадача с ID=" + id + " успешно найдена");
+        } else {
+            System.out.println("Ошибка: подзадача с ID=" + id + " не найдена");
         }
         return subtask;
     }
@@ -139,9 +175,13 @@ public class InMemoryTaskManager implements TaskManager {
             subtasks.put(subtask.getId(), subtask);
             epics.get(subtask.getEpicId()).addSubtaskId(subtask.getId());
             updateEpicStatus(subtask.getEpicId());
+            System.out.println("Создана новая подзадача с ID=" + subtask.getId() +
+                    " для эпика ID=" + subtask.getEpicId());
             return subtask;
+        } else {
+            System.out.println("Ошибка создания: эпик с ID=" + subtask.getEpicId() + " не найден");
+            return null;
         }
-        return null;
     }
 
     @Override
@@ -150,6 +190,10 @@ public class InMemoryTaskManager implements TaskManager {
                 epics.containsKey(subtask.getEpicId())) {
             subtasks.put(subtask.getId(), subtask);
             updateEpicStatus(subtask.getEpicId());
+            System.out.println("Подзадача с ID=" + subtask.getId() + " успешно обновлена");
+        } else {
+            System.out.println("Ошибка обновления: подзадача с ID=" + subtask.getId() +
+                    " или эпик с ID=" + subtask.getEpicId() + " не найдены");
         }
     }
 
@@ -162,30 +206,37 @@ public class InMemoryTaskManager implements TaskManager {
                 epic.removeSubtaskId(id);
                 updateEpicStatus(epic.getId());
             }
+            System.out.println("Подзадача с ID=" + id + " успешно удалена");
+        } else {
+            System.out.println("Ошибка удаления: подзадача с ID=" + id + " не найдена");
         }
     }
 
     private void addToHistory(Task task) {
         history.add(task);
         if (history.size() > MAX_HISTORY_SIZE) {
-            history.removeFirst();
+            history.remove(0);
         }
+        System.out.println("Задача с ID=" + task.getId() + " добавлена в историю");
     }
 
     @Override
     public List<Task> getHistory() {
+        System.out.println("Запрошена история просмотров. Количество элементов: " + history.size());
         return new ArrayList<>(history);
     }
 
     private void updateEpicStatus(int epicId) {
         Epic epic = epics.get(epicId);
         if (epic == null) {
+            System.out.println("Ошибка обновления статуса: эпик с ID=" + epicId + " не найден");
             return;
         }
 
         List<Subtask> epicSubtasks = getSubtasksByEpicId(epicId);
         if (epicSubtasks.isEmpty()) {
             epic.setStatus(Status.NEW);
+            System.out.println("Статус эпика ID=" + epicId + " обновлен на NEW (нет подзадач)");
             return;
         }
 
@@ -203,10 +254,13 @@ public class InMemoryTaskManager implements TaskManager {
 
         if (allNew) {
             epic.setStatus(Status.NEW);
+            System.out.println("Статус эпика ID=" + epicId + " обновлен на NEW");
         } else if (allDone) {
             epic.setStatus(Status.DONE);
+            System.out.println("Статус эпика ID=" + epicId + " обновлен на DONE");
         } else {
             epic.setStatus(Status.IN_PROGRESS);
+            System.out.println("Статус эпика ID=" + epicId + " обновлен на IN_PROGRESS");
         }
     }
 }
